---
source: compiler/src/compiler.rs
expression: "compile([[\"let\".into(), \"x\".into(), 42.0.into()].into(),\n                [\"fn\".into(), [].into(),\n                            [\"fn\".into(), [].into(), \"x\".into()].into()].into()]).await"
---
float64 42
jump 10
jump 3
environment 0
return
environment 0
close f 0 1
return
peek 0
close c 0 1
dump
drop
